2007-10-26  Thomas Heller  <theller@python.net>

	* Allow the creation of SAFEARRAY(UDT) types even if the UDT has
	no _recordinfo_.  Creating instances of these types will fail
	however since no IRecordInfo pointer can be created.  This change
	allows to import typelib wrappers that have UDTs without guids.

2007-10-24  Thomas Heller  <theller@python.net>

	* When a COM property has a 'propputref' but no 'propput' accessor
	method, use the former in the same way as a 'propput' would work.
	When both 'propputref' and 'propput' are present, raise a
	TypeError because we cannot handle this case for now.

	* Fixed infinit recursion error in __getattr__ implementation.
	
	* comtypes.dynamic._Dispatch now implements a __setattr__ methods
	that will call to Invoke() with DISPATCH_PROPERTYPUT or
	DISPATCH_PROPERTYPUTREF.
	
	* Handle DISPATCH_PROPERTYPUTREF in IDispatch.Invoke
	implementation.

	* comtypes.dynamic._Dispatch objects can now be used as VARIANT
	value.

2007-10-22  Thomas Heller  <theller@python.net>

	* The repr of a COM pointer instance now includes the pointer
	value for easier debugging.

2007-10-17  Thomas Heller  <theller@python.net>

	* Disable the VT_UNKNOWN and VT_DISPATCH safearray codes, they do
	not work yet.

	* More multidimensional safearray tests, bug fixes.
	
	* Speed up the unpacking of 1- and 2-dimensional safearrays.
	
	* Lots of refatoring of the new SAFEARRAY code; added a docstring
	to the public function comtypes.safearray._midlSAFEARRAY.

	* For easier debugging, the repr of a VARIANT instance now
	contains the vartype.

2007-10-16  Thomas Heller  <theller@python.net>

	* Changed version number to 0.3.4.
	
	* Mega-patch: Completely rewritten safearray support.  SAFERARRAYs
	are now automatically converted to Python tuples when they are
	received as [out] parameters in COM methods, and sequences are
	accepted as SAFEARRAY [in] parameters.  Multidimensional safearray
	support still has to be added.
